<resources>
    <string name="app_name">db_connnect</string>
    <string name="exam_billing_system">Exam billing System</string>
    <string name="login">Login</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="exam_logo_content">Exam Logo</string>
    <string name="name">Name</string>
    <string name="register_as">Register_as\n</string>
    <string name="register">Register</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="admin_dashboard_content">Admin Dashboard Content</string>
    <string name="admin_action">Admin Action</string>
    <string name="payment_details">Payment Details: …</string>
    <string name="user_name">User Name: …</string>
    <string name="change_password">Change Password</string>
    <string name="assigned_bundles">Assigned Bundles</string>
    <string name="exambill">Exambill</string>
    <string name="admin_view">Admin View</string>
        <string name="exam_logo_description">Exam Logo</string>
        <string name="paper_checked">Paper Checked</string>
        <string name="examiner_progress_0">Examiner: 0%</string>
        <string name="examiner_icon_description">Examiner Icon</string>
        <string name="bundle_progress_0">Bundle: 0%</string>
        <string name="bundle_icon_description">Bundle Icon</string>
        <string name="add_course_button">Add Course</string>
        <string name="add_paper_button">Add Paper</string>
    <string name="add_bundle_button">Add_bundle_button</string>
    <string name="manage_users_button">Manage_users_button</string>
    <string name="manage_teachers_button">Manage_teachers_button</string>
    <string name="generate_notification_button">generate_notification_button\n</string>
    <string name="assign_examiner_button">assign_examiner_button</string>
    <string name="generate_payment_notification_button">generate_payment_notification_button</string>
    <string name="bundle_id_hint">Bundle ID</string>
    <string name="subject_id_hint">Subject ID</string>
    <string name="course_id_hint">Course ID</string>
    <string name="subject_name_hint">Subject Name</string>
    <string name="add_subject_hint">Add Subject</string>
    <string name="bundle_name">Bundle Name</string>
    <string name="course_name">Course Name</string>
    <string name="subject_name">Subject Name</string>
    <string name="due_date">Due Date</string>
    <string name="status">Status</string>
    <string name="new_password">New Password</string>
    <string name="chat">Chat</string>
    <string name="type_a_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="registration_content_description">registration_content_description\n</string>
    <string name="forgot_password_content_description">forgot_password_content_description</string>
    <string name="admin_radio_button_content_description">forgot_password_content_description\n</string>
    <string name="user_radio_button_content_description">user_radio_button_content_description\n</string>
    <string name="login_button_content_description">login_button_content_description</string>
    <string name="Name">User</string>
    <string name="last">Last</string>
    <string name="BUNDLE">Assigned Bundles</string>
    <string name="loading">Loading...</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_bundle_name">Enter Bundle Name</string>
    <string name="enter_notification_message">Enter Notification Message</string>
    <string name="enter_examiner_name">Enter Examiner Name</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="enter_paper_name">Enter_paper_name</string>
    <string name="add_course">Add_course</string>
    <string name="Exambill">Exambill</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_paper">Add Paper</string>
    <string name="add_bundle">Add Bundle</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_teachers">Manage Teachers</string>
    <string name="generate_notification">Generate Notification</string>
    <string name="assign_examiner">Assign Examiner</string>
    <string name="generate_payment_notification">Generate Payment Notification</string>
    <string name="paper_id">Paper id</string>
    <string name="Enter_User_id">Enter_User_id</string>
    <string name="Bundle_name">Bundle Name:</string>
    <string name="Bundle_id">Bundle ID:</string>
    <string name="Paper_name">Paper Name:</string>
    <string name="Paper_id">Paper ID:</string>
</resources>