<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/bundleNameEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/enter_bundle_name"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/dark_gray" />

    <EditText
        android:id="@+id/courseIdEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/course_id_hint"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/dark_gray" />
    <EditText
        android:id="@+id/subjectIdEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/subject_id_hint"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/dark_gray" />
    <EditText
        android:id="@+id/paperIdEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/paper_id"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/dark_gray" />

    <ImageButton
        android:id="@+id/addBundleButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_add"
        android:padding="16dp"
        android:contentDescription="@string/add_bundle_button"
        />

</LinearLayout>