<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/subjectNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/subject_name_hint"
        android:inputType="text"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/dark_gray" />

    <EditText
        android:id="@+id/courseIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/course_id_hint"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/addSubjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_subject_hint" />

</LinearLayout>